// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/gallery/Gallery return Gallery and click new 1`] = `
<div>
  <div
    class="Gallery"
  >
    <div
      class="GalleryCard selected"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
      <div
        class="gallery-item"
      >
        <div
          class="DividerElement"
        />
        <div
          class="DividerElement"
        />
      </div>
    </div>
    <div
      class="GalleryCard"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
      <div
        class="gallery-item"
      />
    </div>
    <div
      class="octo-gallery-new"
    >
      + New
    </div>
  </div>
</div>
`;

exports[`src/components/gallery/Gallery return Gallery readonly 1`] = `
<div>
  <div
    class="Gallery"
  >
    <div
      class="GalleryCard selected"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        class="gallery-item"
      >
        <div
          class="DividerElement"
        />
        <div
          class="DividerElement"
        />
      </div>
    </div>
    <div
      class="GalleryCard"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        class="gallery-item"
      />
    </div>
  </div>
</div>
`;

exports[`src/components/gallery/Gallery should match snapshot 1`] = `
<div>
  <div
    class="Gallery"
  >
    <div
      class="GalleryCard selected"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
        <div
          class="Menu noselect left"
        >
          <div
            class="menu-contents"
          >
            <div
              class="menu-options"
            >
              <div>
                <div
                  aria-label="Delete"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <i
                    class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                  />
                  <div
                    class="menu-name"
                  >
                    Delete
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
              <div>
                <div
                  aria-label="Duplicate"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <i
                    class="CompassIcon icon-content-copy content-copy"
                  />
                  <div
                    class="menu-name"
                  >
                    Duplicate
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
              <div>
                <div
                  aria-label="Copy link"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <i
                    class="CompassIcon icon-link-variant LinkIcon"
                  />
                  <div
                    class="menu-name"
                  >
                    Copy link
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
            </div>
            <div
              class="menu-spacer hideOnWidescreen"
            />
            <div
              class="menu-options hideOnWidescreen"
            >
              <div
                aria-label="Cancel"
                class="MenuOption TextOption menu-option menu-cancel"
                role="button"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="gallery-item"
      >
        <div
          class="DividerElement"
        />
        <div
          class="DividerElement"
        />
      </div>
    </div>
    <div
      class="GalleryCard"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
      <div
        class="gallery-item"
      />
    </div>
    <div
      class="octo-gallery-new"
    >
      + New
    </div>
  </div>
</div>
`;
